--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
-language: c++
+language: cpp
 compiler:
  - g++
+
+before_install:
+ - wget https://github.com/LaurentGomila/SFML/archive/2.2.tar.gz -O /tmp/sfml.tar.gz
+ - tar -zxvf /tmp/sfml.tar.gz
+ - cd SFML-2.2
+ - mkdir build
+ - cd build
+ - cmake . --build ../ -G "Unix Makefiles" -DCMAKE_CXX_FLAGS="-std=c++11"
+ - sudo make install
+ - cd ../../
+ - cd build
 
 script:
  - make
