--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ before_install:
  - echo "yes" | sudo add-apt-repository ppa:ubuntu-toolchain-r/test
  - sudo apt-get -qq update
  - sudo apt-get -qq install build-essential libtool gcc-4.9 g++-4.9 make cmake openssl
+ - sudo apt-get install libglew-dev
+ - sudo apt-get install libopenal-dev
+ - sudo apt-get install libsndfile-dev
+ - sudo apt-get install libfreetype6-dev
+ - sudo apt-get install libudev-dev
  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 50
  - wget https://github.com/LaurentGomila/SFML/archive/2.2.tar.gz -O /tmp/sfml.tar.gz
  - tar -zxvf /tmp/sfml.tar.gz
