--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,15 @@ before_install:
  - sudo apt-get install libfreetype6-dev
  - sudo apt-get install libudev-dev
  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 50
- - wget https://github.com/LaurentGomila/SFML/archive/2.2.tar.gz -O /tmp/sfml.tar.gz
+ - wget https://codeload.github.com/SFML/SFML/tar.gz/2.3.2 -O /tmp/sfml.tar.gz
  - tar -zxvf /tmp/sfml.tar.gz
- - cd SFML-2.2
+ - cd SFML-2.3.2/
  - mkdir build
  - cd build
  - cmake . --build ../ -G "Unix Makefiles" -DCMAKE_CXX_FLAGS="-std=c++0x" -DCMAKE_INSTALL_PREFIX="/usr"
+ - make -j8
  - sudo make install
  - cd ../../
 
 script:
- - make all
+ - make
