--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
  - sudo apt-get install libsndfile-dev
  - sudo apt-get install libfreetype6-dev
  - sudo apt-get install libudev-dev
+ - sudo apt-get install libx11-xcb-dev
  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 50
  - wget https://codeload.github.com/SFML/SFML/tar.gz/2.3.2 -O /tmp/sfml.tar.gz
  - tar -zxvf /tmp/sfml.tar.gz
