--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
  - sudo apt-get install libudev-dev
  - sudo apt-get install libx11-xcb-dev
  - sudo apt-get install libxcb-image0-dev 
+ - sudo apt-get install libxcb-render0-dev
  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 50
  - wget https://codeload.github.com/SFML/SFML/tar.gz/2.3.2 -O /tmp/sfml.tar.gz
  - tar -zxvf /tmp/sfml.tar.gz
@@ -26,4 +27,4 @@ before_install:
  - cd ../../
 
 script:
- - make
+ - make fast
