--- a/.travis.yml
+++ b/.travis.yml
@@ -3,28 +3,7 @@ compiler:
  - g++
 
 before_install:
- - echo "yes" | sudo add-apt-repository ppa:kalakris/cmake
- - echo "yes" | sudo add-apt-repository ppa:ubuntu-toolchain-r/test
- - sudo apt-get -qq update
- - sudo apt-get -qq install build-essential libtool gcc-4.9 g++-4.9 make cmake openssl
- - sudo apt-get install libglew-dev
- - sudo apt-get install libopenal-dev
- - sudo apt-get install libsndfile-dev
- - sudo apt-get install libfreetype6-dev
- - sudo apt-get install libudev-dev
- - sudo apt-get install libx11-xcb-dev
- - sudo apt-get install libxcb-image0-dev 
- - sudo apt-get install libxcb-render0-dev
- - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 50
- - wget https://codeload.github.com/SFML/SFML/tar.gz/2.3.2 -O /tmp/sfml.tar.gz
- - tar -zxvf /tmp/sfml.tar.gz
- - cd SFML-2.3.2/
- - mkdir build
- - cd build
- - cmake . --build ../ -G "Unix Makefiles" -DCMAKE_CXX_FLAGS="-std=c++0x" -DCMAKE_INSTALL_PREFIX="/usr"
- - make -j8
- - sudo make install
- - cd ../../
+ - sudo apt-get -qq install libsfml-dev
 
 script:
- - make fast
+ - make DEFINES=-DOLD_SFML_COMPAT fast
