--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ compiler:
  - g++
 
 before_install:
+ - sudo apt-get -qq install gcc-4.9 g++-4.9 make
  - sudo apt-get -qq install libsfml-dev
+ - sudo apt-get update
+ - sudo apt-get upgrade
 
 script:
  - make DEFINES=-DOLD_SFML_COMPAT fast
