--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ compiler:
  - g++
 
 before_install:
- - sudo apt-get -qq install gcc-4.9 g++-4.9 make
- - sudo apt-get -qq install libsfml-dev
+ - echo "yes" | sudo add-apt-repository ppa:kalakris/cmake
+ - echo "yes" | sudo add-apt-repository ppa:ubuntu-toolchain--r/test
+ - sudo apt-get update
+ - sudo apt-get -qq install gcc-4.9 g++-4.9 make libsfml-dev
  - sudo apt-get update
  - sudo apt-get upgrade
 
