--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
 
 before_install:
  - echo "yes" | sudo add-apt-repository ppa:kalakris/cmake
- - echo "yes" | sudo add-apt-repository ppa:ubuntu-toolchain--r/test
+ - echo "yes" | sudo add-apt-repository ppa:ubuntu-toolchain-r/test
  - sudo apt-get update
  - sudo apt-get -qq install gcc-4.9 g++-4.9 make libsfml-dev
  - sudo apt-get update
